Fix PhotoList background dark mode toggle

--- a/frontend/src/styles/HomeRoute.scss
+++ b/frontend/src/styles/HomeRoute.scss
@@ -1,6 +1,17 @@
+$home-route-background-color: #F5F5F5;
+$dark-home-route-background-color: #1a1a1a;
+
+
 .home-route {
   max-width: 1200px;
   margin: auto;
   
-  background-color: #F5F5F5;
+  background-color: $home-route-background-color;
+}
+
+.dark-home-route {
+  max-width: 1200px;
+  margin: auto;
+  
+  background-color: $dark-home-route-background-color;
 }
